--- a/E2.html
+++ b/E2.html
@@ -4,6 +4,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="E2.js"></script>
+    <script src="E2JS.js"></script>
 </body>
 </html>
